--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.0+2
+  # sizer: ^2.0.15
   glass_kit: ^2.0.1
   google_fonts: ^2.1.0
   lottie: ^1.1.0
@@ -32,6 +33,13 @@ dependencies:
   glass: ^1.0.1
   expansion_tile_card: ^2.0.0
   getwidget: ^2.0.4
+  responsive_builder: ^0.4.1
+  flicked_cards: ^0.0.3
+  responsive_framework: ^0.1.5
+  flutter_layout_grid: ^1.0.3
+  responsive_grid: ^2.0.0
+  auto_size_text: ^3.0.0
+  fab_circular_menu: ^1.0.2
 
 dev_dependencies:
   flutter_test:
