--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   scroll_to_index: ^2.1.1
   sprung: ^3.0.0
   hovering: ^1.0.4
-  
+  folding_cell: ^1.0.2
+  animated_text_kit: ^4.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
