--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   expandable: ^5.0.1
   expand_widget: ^2.1.0
   animated_card: ^2.0.0
+  mason_cli: ^0.1.0-dev.34
 
 dev_dependencies:
   flutter_test:
